--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "esbuild": "^0.15.13",
         "express": "^4.18.2",
         "mocha": "^10.2.0",
+        "open": "^9.1.0",
         "typescript": "^5.2.2"
     }
 }
